# elte-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: tests.yml
app/: config.py  document_sync.py  embeddings.py  index_snapshots.py  ingest.py  main.py  news_ingest.py  profiles.py  rag_chain.py  runtime_settings.py  scraper.py  usage_log.py
archive/data/experiments/: comparison_20251220_160653.json  comparison_20251220_163333.json
archive/src/backend/: compare_experiments.py  experiment_config.py  ingest_experiment.py  test_retrieval.py
data/eval/: benchmark_plan.json  embedding_cost_estimate.json  latest_metrics.json  multi_turn_questions.json  questions.json
data/indexes/0541bf3ade51289f__local_minilm__standard__docling_v1/: manifest.json
data/indexes/0541bf3ade51289f__local_minilm__standard__reuse_index_chunks_v1/: index.pkl  manifest.json
data/indexes/0541bf3ade51289f__local_mpnet__standard__reuse_index_chunks_v1/: index.pkl  manifest.json
data/indexes/0541bf3ade51289f__openai_large__standard__reuse_index_chunks_v1/: manifest.json
data/indexes/0541bf3ade51289f__openai_small__standard__reuse_index_chunks_v1/: manifest.json
data/indexes/65d3de6d8a47686b__openai_large__standard__docling_v1/: index.faiss  manifest.json
data/indexes/65d3de6d8a47686b__openai_small__standard__docling_v1/: index.faiss  manifest.json
data/news/: state.json
data/news/items/: 3d4fb1b769332c79.json  5c1e53e0f9386590.json  8e09454b21583bc3.json  8f40445eb26bd64a.json  (+7 more)
data/news_vector_store/: index.faiss  index.pkl
data/scraped_news/: 0b76115bb1ba.json  d54f61be2568.json
data/vector_store/: index.faiss  index.pkl
docs/thesis/: evaluation.md  methodology.md  results.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
recources/architecture/: code.puml
scripts/: estimate_embedding_cost.py  run_benchmarks.py  run_evaluation.py
src/: main.py
src/backend/: ingest.py
tests/: conftest.py  test_api.py  test_index_snapshots.py  test_ingest.py  test_news_ingest.py  test_rag_chain.py  test_runtime_settings.py  test_scraper.py
(+36 files in other folders)
