[project]
name = "elte-rag-assistant"
version = "0.2.0"
description = "RAG-based FAQ Web Application for University Campus Policies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.125.0",
    "httpx>=0.28.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "docling>=2.31.0",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
